--- a/app/src/main/res/layout/activity_id_card_recognition.xml
+++ b/app/src/main/res/layout/activity_id_card_recognition.xml
@@ -21,6 +21,6 @@
         android:id="@+id/tv_id_number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="16pt" />
+        android:textSize="14sp" />
 
 </LinearLayout>
